# rvault

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: commands.rs  errors.rs  gpg_helpers.rs  main.rs  ui.rs
